--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +8,14 @@
 </head>
 <body>
     <h1>Dragão de Gelo</h1>
-    <p></p>
-    <p></p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2mPwwkdWPCLRC42KQX4diQNTQ6MSsmlMSlQ&s" alt="" width="550">
+    <p>O dragão de gelo é uma espécie rara quase extinta. Contendo escamas duras, e olhos que é capas de enxergar no escuro utilizando infravermelho.</p>
+    <p><i>Eles vivem normalmente em montanhas cobertas de neve, se alimentam de pixes de água doce.</i></p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2WXShrQhFkBa3xOItZ2zm-1W9juhZykh6UA&s" alt="" width="550">
     <ul>
         <li>força: 300</li>
         <li>velocidade: 200km/h</li>
+        <li>resistência: 500</li>
+        <li>quantidades de ataques: 9</li>
     </ul>
 </body>
 </html><!--esse site vai ficar melhor que o site da google-->
